--- a/src/main/resources/hyperon-demo-app.properties
+++ b/src/main/resources/hyperon-demo-app.properties
@@ -1,6 +1,6 @@
 # point this to Hyperon Studio Database (version 2.1.3 or later)
 # download and extract Hyperon Bundle from: https://hyperon.io/download
-hyperon.database.url=jdbc:h2:~/hyperon/hyperon.demo;AUTO_SERVER=TRUE;IFEXISTS=TRUE
+hyperon.database.url=jdbc:h2:tcp://localhost:9092/hyperon.demo;AUTO_SERVER=TRUE;NON_KEYWORDS=VALUE
 hyperon.database.username=sa
 hyperon.database.password=sa
 hyperon.database.dialect=h2
