--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "author": "Decerto",
   "dependencies": {
+    "@fontsource/poppins": "^4.5.10",
     "angular": "1.8.3",
     "angular-loading-spinner": "0.0.3",
     "angular-spinner": "1.0.1",
@@ -24,7 +25,6 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2"
   },
-
   "scripts": {
     "build": "npm ci && gulp"
   }
